--- a/css1.css
+++ b/css1.css
@@ -1,5 +1,5 @@
 .ull{
-    border: solid black;
+    //border: solid black;
     padding: 10px;
     width: 98%;
 }
@@ -36,7 +36,7 @@ a:hover{
     padding-top: 100px;
     height: 131px;
     width: 100%;
-    border: 1px solid black;
+    //border: 1px solid black;
 }
 .logo{
     //margin-top: 100px;
@@ -91,7 +91,7 @@ a:hover{
 .button{
     width: 301px;
     margin: 0 auto;
-    border: 1px solid black;
+    //border: 1px solid black;
     display: flex;
 }
 .googlesearch{
@@ -132,8 +132,35 @@ a:hover{
     width: 151px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
-    border: solid black;
+    color:#5F6368;
+    //border: solid black;
 }
 input:focus{
     outline: none;
+}
+.ull1{
+    position: absolute;
+    right: 0.5%;
+    left: 0.5%;
+    bottom: 0px;
+    //border: solid black;
+    padding: 10px;
+    background-color: #f2f2f2;
+    font-family: Arial, Helvetica, sans-serif;   
+}
+.fujiwara{
+    display: inline-block;
+    margin-left: 10px;
+}
+.negin1{
+    float: right;
+    display: inline-block;
+    margin-right: 0;
+    margin-left: auto;
+    //border: solid black;
+}
+.fujiwara1{
+    margin-right: 10px;
+    display: inline-block;
+    
 }
