--- a/css.css
+++ b/css.css
@@ -1,6 +1,59 @@
 .ull{
     width: 100%;
-    height: 100px;
+    height: 131px;
+    border: solid black;
+    min-width: 1000px;
+}
+.logo{
+    float: left;
+    margin-top: 31px;
+    margin-right: 10px;
+    height: 31px;
+    width: 155px;
+    border: solid black;
+}
+.logo1{
+    height: 31px;
+    margin-left: 17px;
+}
+.search{
+    display: inline-block;
+    margin-top: 31px;
+    height: 32px;
+    width: 555px;
+    border:  1px solid #dfe1e5;
+    border-radius: 24px;
+}
+.input{
+    //border: solid black;
+    width: 444px;
+    height: 14px;
+    margin: 5px 31px;
+}
+.input1{
+    border: none;
+    outline: none;
+}
+.buttons{
+    margin-top: 17px;
+    margin-left: 155px;
+    width: 555px;
+    height: 31px;
+
+    border: solid black;
+}
+.button{
+    display: inline-block;
+    width: 31px;
+    height: 31px;
+    border: solid black;
+}
+.user{
+    float: right;
+    padding-left: 32px;
+    margin-top: 31px;
+    height: 31px;
+    width: 31px;
     border: solid black;
 }
 .body1{
@@ -17,7 +70,7 @@
 .rh{
     position: absolute;
     height: 31px;
-    width: 100px;
+    width: 310px;
     left: 100px;
     border: solid black;
 }
@@ -27,4 +80,52 @@
     width: 555px;
     position: absolute;
     left: 100px;
+    display: block;
 }
+.ad{
+    border: solid black;
+    height: 131px;
+}
+.title{
+    height: 20px;
+    text-align: left;
+    border: solid black;
+    font-size: 20px !important;
+    font-weight: 400;
+    font-family: arial;
+    color: #1a0dab;
+}
+.address{
+    border: solid black;
+    height: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+.contain{
+    text-align: left;
+    margin-top: 3px;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #4d5156;
+}
+.github{
+    border: solid black;
+    height: 100px;
+}
+.res{
+    border: solid black;
+    height: 100px;
+}
+.video{
+    border: solid black;
+    height: 100px;
+}
+.relate{
+    border: solid black;
+    height: 100px;
+}
+.google{
+    border: solid black;
+    height: 100px;
+}
+
