--- a/css.css
+++ b/css.css
@@ -84,9 +84,9 @@
 .center{
     border: solid black;
     height: 1400px;
-    width: 555px;
+    width: 604px;
     position: absolute;
-    left: 100px;
+    left: 155px;
     display: block;
 }
 .ad{
@@ -136,12 +136,60 @@
     color: #4d5156;
 }
 .github{
+    border: 1px solid #dfe1e5;
+    border-radius: 8px;
+    height: 131px;
+    padding: 16px;
+}
+.containgithub{
     border: solid black;
-    height: 100px;
+    height: 70px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    margin-bottom: 10px;
 }
 .res{
     border: solid black;
-    height: 100px;
+    height: 117px;
+    padding: 15px;
+}
+.pas{
+    border: 1px solid #dfe1e5;
+    border-radius: 8px;
+    padding: 1px;
+    display: block;
+}
+.pas1{
+    border: solid black;
+    height: 31px;
+    font-size: 20px;
+    font-weight: 400px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.drop{
+    border-top: 1px solid #dfe1e5;
+    height: 31px;
+    display: block;
+    width: 100%;
+    outline: none;
+    text-align: left;
+}
+.dropcontain{
+    display: none;
+    padding: 1px;
+    border: solid black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.dropcontain1{
+    font-size: 16px;
+}
+.pakol{
+    border: solid black;
+}
+.lili{
+    margin-left: -20px;
+    margin-bottom: 4px;
 }
 .video{
     border: solid black;
